--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="button_distance">Distance</string>
     <string name="button_logout">Log Out</string>
     <string name="button_senddata">Send Data</string>
-
+    <string name="none_paired">No devices have been paired</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
